porick/public/css/base.css
body {
    height: 100%;
    padding-top: 45px;
}
.well {
    padding: 10px 18px 18px 18px !important;
}

.quote .votes {
    float: left;
    display: block;
    margin-left: -10px;
}
.votes .vote {
    width: 15px;
    margin-top: 2px;
    height: 14px;
}
.votes .vote.up {
}
.votes .vote.down {
}
.votes .score {
    text-align: center;
    margin-top: 3px;
    font-weight: bold;
    font-size: 16px;
    color: #C6C6C6;
}

.quote .metadata {
    margin-top: -10px;
    margin-left: 15px;
}

.quote .metadata li {
    float: left;
    display: block;
    margin-right: 15px;
}
.quote .metadata li.nomargin {
    margin: 0;
}

.quote .metadata li.date_submitted {
    float: right;
}

.quote .content {
    font-size: 13px;
    margin-top: 30px;
    margin-left: 15px;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

form.create_new_quote textarea {
    width: 882px;
}

